RESOLVED FIXED 24327
Fix hit testing on elements running accelerated transform animations
https://bugs.webkit.org/show_bug.cgi?id=24327
Summary Fix hit testing on elements running accelerated transform animations
Simon Fraser (smfr)
Reported 2009-03-03 10:12:40 PST
In implementing 3d hit testing, I broke the hit testing on elements running accelerated animations. This needs to be fixed in a more central location.
Attachments
Patch, changelog (3.64 KB, patch)
2009-03-04 15:26 PST, Simon Fraser (smfr)
eric: review-
Revised patch (3.54 KB, patch)
2009-03-04 18:32 PST, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-04 15:26:31 PST
Created attachment 28287 [details] Patch, changelog
Eric Seidel (no email)
Comment 2 2009-03-04 17:27:41 PST
Comment on attachment 28287 [details] Patch, changelog Since you never seem to use the "has a transform" bool return, why not just have it return a TransformationMatrix object instead of passing one by reference? Seems cleaner to return one to me. Otherwise looks fine. You should add a comment to the ChangeLog that the test case in question only fails when ACCELLERATED_COMPOSITING is turned on.
Simon Fraser (smfr)
Comment 3 2009-03-04 18:32:46 PST
Created attachment 28296 [details] Revised patch
Dave Hyatt
Comment 4 2009-03-05 11:09:12 PST
Comment on attachment 28296 [details] Revised patch r=me
Simon Fraser (smfr)
Comment 5 2009-03-05 11:40:11 PST
Note You need to log in before you can comment on or make changes to this bug.